data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2293.wast
;; Design a `block` instruction with `blocktype` returning no values, but an inner `if-else` followed by `br_if` uses conditions to determine flow. Ensure that `br_if` correctly branches back without mismanaging operand stack states.

(assert_invalid
  (module
    (func (block (if (i32.const 1) 
                  (br_if 1 (i32.const 0))))
    )
  )
  "type mismatch or stack mismanagement"
)